Delinting again... s/stream.collect(Collectors.toList())/stream.toList()/g
Also added @SuppressWarnings("unused") annotations to entry-points of Main
class that are hidden to IntelliJ because they're called by Picocli.