@@ -4,7 +4,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Spliterator;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
@@ -87,7 +86,7 @@ public class CartesianProduct<T> {
 
                 List<T> result = IntStream.range(0, lists.length)
                         .mapToObj(i -> lists[i].get(pos % divisors[i] / (divisors[i]/lists[i].size())))
-                        .collect(Collectors.toList());
+                        .toList();
 
                 action.accept(result);
 
