@@ -9,7 +9,6 @@ import java.util.function.BinaryOperator;
 import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.Collector;
-import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -42,7 +41,7 @@ public class CartesianProductTest {
         List<String> product = CartesianProduct.of(l1)
                 .stream()
                 .map(l -> l.stream().collect(concatenator))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(l1.size(), product.size());
         assertEquals(List.of("a", "b", "c", "d"), product);
@@ -56,7 +55,7 @@ public class CartesianProductTest {
         List<String> product = CartesianProduct.of(l1, l2)
                 .stream()
                 .map(l -> l.stream().collect(concatenator))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(l1.size() * l2.size(), product.size());
         assertEquals(List.of("a1", "a2", "a3", "b1", "b2", "b3", "c1", "c2", "c3"), product);
@@ -72,7 +71,7 @@ public class CartesianProductTest {
                 .stream()
                 .map(l -> l.stream().collect(concatenator))
 //                .peek(s -> System.out.println("Result: " + s + ", on " + Thread.currentThread()))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(l1.size() * l2.size() * l3.size(), product.size());
         assertEquals(List.of("a1A", "a1B", "a2A", "a2B", "b1A", "b1B", "b2A", "b2B"), product);
@@ -89,7 +88,7 @@ public class CartesianProductTest {
                 .parallel()
                 .map(l -> l.stream().collect(concatenator))
 //                .peek(s -> System.out.println("Result: " + s + ", on " + Thread.currentThread()))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(l1.size() * l2.size() * l3.size(), product.size());
         assertEquals(List.of("a1A", "a1B", "a2A", "a2B", "b1A", "b1B", "b2A", "b2B"), product);
